--- a/18.1/src/style.css
+++ b/18.1/src/style.css
@@ -3,13 +3,7 @@ html {
 }
 
 body {
-  background-color: rgb(214, 250, 214);
   margin: 0;
-}
-
-.carousel {
-  width: 100%;
-  height: 300px;
 }
 
 .left {
@@ -30,8 +24,9 @@ body {
 }
 
 .header {
-  background: #1ccacd;
+  background: #5ec7d4;
 }
+
 .header .brand h3 {
   font-weight: 300;
   font-style: italic;
@@ -40,15 +35,19 @@ body {
   line-height: 1;
   font-size: 1.5rem;
 }
+
 .header .brand h3 a {
   color: #fff;
 }
+
 .header .brand h3 a:hover {
-  color: aquamarine;
+  color: #dcf394;
 }
+
 .menu {
   float: right;
 }
+
 .menu ul {
   list-style: none;
   margin: 0;
@@ -65,9 +64,58 @@ body {
   line-height: 1;
 }
 
+.titleSection h3 {
+  text-align: center;
+  color: rgb(180, 179, 179);
+  margin: 20px;
+  text-shadow: 1px 1px 1px whitesmoke;
+}
+
+.titleSelection {
+  background-color: white;
+}
+
+#topicSection {
+  height: 400px;
+  background-color: #dcf394;
+}
+
+.carousel {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+}
+
+.item {
+  float: left;
+}
+.card {
+  background: lightgrey;
+  border: 3px solid whitesmoke;
+  width: 300px;
+  height: 250px;
+  margin: 10px;
+  padding-top: 50px;
+  text-align: center;
+}
+
+.card h2 {
+  color: white;
+  text-shadow: 1px 1px 1px darkgray;
+}
+
+img {
+  width: 200px;
+  border: 2px solid #808080;
+  margin-bottom: 20px;
+}
+
 #moreSources {
-  background: #48c8ca;
+  background: #5ec7d4;
   padding: 5rem 0;
+  text-align: right;
 }
 
 #moreSources h1 {
@@ -87,60 +135,34 @@ body {
 #moreSources .button {
   display: inline-block;
   padding: 1rem 2rem;
-  margin-right: 0;
   font-size: 1.25rem;
   font-weight: 400;
   background: #fff;
-  color: #1ccacd;
-  border: 1px solid #fff;
-  border-radius: 2px;
+  color: #5ec7d4;
+  border: 2px solid #fff;
+  border-radius: 3px;
 }
-button.outline {
+
+#moreSources .outline {
   background: transparent;
   color: #fff;
 }
-button:hover {
+#moreSources button:hover {
   background: #808080;
   border: 1px solid #808080;
   color: #fff;
 }
 
-.centreSection h3 {
-  text-align: center;
-  color: #808080;
-  margin: 20px;
-}
-.centreSection h2 {
-  color: #fff;
-  text-align: center;
-  font-style: italic;
-  font-weight: 700;
-  font-size: 32px;
+.sources {
+  margin-left: 0;
 }
 
 .footer {
-  margin-top: 10rem;
-  background-color: lightgrey;
-  margin: 20px;
-  color: #808080;
-}
-
-.footer h5 {
+  background-color: #dcf394;
+  padding: 40px;
   text-align: center;
-  color: #8d8d8d;
-  margin: 2rem 0;
-  font-weight: normal;
-  font-size: 1rem;
 }
 
-.item {
-  float: left;
-}
-.card {
-  background: lightgrey;
-  color: white;
-  border: 3px solid whitesmoke;
-  width: 400px;
-  height: 300px;
-  margin: 10px;
+.footer a {
+  color: #808080;
 }
