rename chevron to arrow in 18.2 (all files)

--- a/18.2/src/style.css
+++ b/18.2/src/style.css
@@ -101,7 +101,7 @@ body {
 #arrow-right {
   transform: rotate(-45deg);
 }
-.chevron {
+.arrows {
   display: none;
   border-right: 4px solid darkgrey;
   border-bottom: 4px solid darkgrey;
